# llms-from-scratch-mlx

./: .gitignore  README.md  main.py  pyproject.toml
ch02/: ch02.ipynb
ch03/: ch03.ipynb
ch04/: ch04.ipynb  previous_chapters.py
ch05/: ch05.ipynb  previous_chapters.py
ch06/: ch06.ipynb  previous_chapters.py
ch07/: ch07.ipynb
