[project]
name = "llms-from-scratch-mlx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "mlx>=0.28.0",
    "mlx-data>=0.1.0",
    "mlx-lm>=0.26.4",
    "seaborn>=0.13.2",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
]
